# analyze-eth-events

./: README.md  chainlink.py  consts.py  event_signatures.py  parse-aave-liquidations-simple.py  parse-compound-liquidations-simple.py  parse-new-events.py  poller.py  pyproject.toml  telegram_bot.py  transfer_parser.py  tx_parser.py  web3connect.py
consts/: ABI_batch_contract.json  ABI_batch_contract_goerli.json  ABI_batch_contract_mainnet.json  _swap_routers.json  all_event_signatures.json  chainlink_feed_info_by_addr.json  chainlink_feed_info_by_addr_avalanche.json  existing_ids_info.json
consts/AAVE/: AAVE_aTOKENS.json
consts/BENQI/: ABI_benqi_oracle.json
consts/Chainlink/: ABI_Chainlink_OffchainAggregator.json  ABI_Chainlink_OffchainAggregator_goerli.json
consts/Compound/: ABI_compound_comptroller.json  ABI_compound_oracle.json  compound_mainnet_addresses.json
consts/addr_to_abi/: 0x9b26214bEC078E68a394AaEbfbffF406Ce14893F.json  0xEc6f4Cd64d28Ef32507e2dc399948aAe9Bbedd7e.json  0xd4641b75015E6536E8102D98479568D05D7123Db.json
handlers/: aave_liquidation_handler.py  base_handler.py  dummy_handler.py  handler_interface.py  ipfs_example_handler.py  tornado_deposit_handler.py  tornado_withdraw_handler.py  uniswap_v2_swap_handler.py
